# wsi-break-time

./: .gitignore  .todo  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.bat  build.py  build.sh  build.spec
.claude/: settings.local.json
docs/: _config.yml  index.html
docs/architecture/: 01-overview.md  02-settings-and-config.md  03-timer-manager.md  04-overlay.md  05-tray-icon.md  06-todo-system.md  07-pomodoro.md  08-settings-dialog.md  09-app-orchestrator.md
legacy/python/: README.md  build.bat  build.sh  run.py
legacy/python/src/: __init__.py  app.py  todo_manager.py
mobile/: README.md  build.bat  build.sh  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/com/wsi/wsi_break_time/: MainActivity.kt
mobile/test/: widget_test.dart
src/: __init__.py  app.py  app.rs  event.rs  main.py  main.rs  notifications.rs  overlay.py  pomodoro.rs  pomodoro_manager.py  settings.py  settings.rs  timer.rs  timer_manager.py  todo_model.py  tray.rs  tray_icon.py
src/todo/: manager.rs  model.rs
