[package]
name = "wsi-break-time"
version = "1.0.0"
edition = "2021"
description = "Wsi Break Time - Proteção para seus olhos"

[dependencies]
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui = "0.29"
tray-icon = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
crossbeam-channel = "0.5"
image = { version = "0.25", default-features = false, features = ["png"] }
rodio = { version = "0.19", default-features = false, features = ["wav"] }
notify-rust = "4"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
opt-level = "z"
lto = true
strip = true
